Fixes Firefox bug where the graph div would overlap the circle div

--- a/jade/stylesheet.css
+++ b/jade/stylesheet.css
@@ -208,4 +208,5 @@
 				width: 850px;
 				height: 250px;
 				background: white;
+				margin-top: 50px;
 			}
